Se agregó Bootstrap al proyecto, menú e información personal.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html Lang="es">
+    <head>
+        <meta charset='utf-8'>
+        <title>Página de facilito</title>
+        <link rel="stylesheet" href="estilo.css">
+    </head>
+    <body>
+        <div id='contenido'>
+            <header>
+                
+                <nav>
+                    <ul>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href='#'>Educacion</a></li>
+                        <li><a href='#'>Experiencia</a></li>
+                        <li><a href='#'>Merito</a></li>
+                        <li><a href='#'>Contacto</a></li>
+                    </ul>
 
+                </nav> 
+<h1>Jonathan Israel</h1>
+<h1>Lozada López</h1>
+            </header>
+            <section>
+                
+            </section>
+        </div>
+    </body>
+</html>
