--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                     </ul>
 
                 </nav> 
-<h1>Jonathan Israel</h1>
 <h1>Lozada López</h1>
+<h1>Jonathan Israel</h1>
+<p>Hola mi nombre es Jonathan Lozada y soy estudiante de la universidad tecnica de ambato , tengo 21 años y estoy en cuarto semestre en la carrera de Software de la Facultad de ingenieria en sistemas electrónica e industrial</p>
             </header>
             <section>
                 
