Se agregó la experiencia de bases de datos.

--- a/experiencia.html
+++ b/experiencia.html
@@ -8,8 +8,9 @@
     <body>
         <div id='contenido'>
             <header>
-                
-             Hola mundo 
+             <div>Tengo experiencia en base de datos my sql xd                
+             </div>
+          <div></div>
 
             </header>
             <section>
